--- a/3.html
+++ b/3.html
@@ -6,20 +6,43 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1><a href="index.html">WEB</a></h1>
-    <input type="button" value="night" onclick="
+    <h1><a href="index.html" style="color: blue;">WEB</a></h1>
+    <!-- <input type="button" value="night" onclick="
         document.querySelector('body').style.backgroundColor = 'black';
         document.querySelector('body').style.color = 'white';
     ">
     <input type="button" value="day" onclick="
         document.querySelector('body').style.backgroundColor = 'white';
         document.querySelector('body').style.color = 'black';
+    "> -->
+    <input type="button" value="night" onclick="
+        var target = document.querySelector('body');
+        var alist = document.querySelectorAll('a');
+        if(this.value == 'night'){
+            target.style.backgroundColor = 'black';
+            target.style.color = 'white';
+            this.value = 'day';
+            var i = 0;
+            while(i < alist.length){
+                alist[i].style.color = 'powderblue';
+                i = i + 1;
+            }
+        }else{
+            target.style.backgroundColor = 'white';
+            target.style.color = 'black';
+            this.value = 'night';
+            var i = 0;
+            while(i < alist.length){
+                alist[i].style.color = 'blue';
+                i = i + 1;
+            }
+        }
     ">
     <div id="grid">
         <ol>
-            <li><a href="1.html">HTML</a></li>
-            <li><a href="2.html">CSS</a></li>
-            <li><a href="3.html">JavaScript</a></li>
+            <li><a href="1.html" style="color: blue;">HTML</a></li>
+            <li><a href="2.html" style="color: blue;">CSS</a></li>
+            <li><a href="3.html" style="color: blue;">JavaScript</a></li>
         </ol>
         <div id="article">
             <h2>JavaScript</h2>
@@ -28,5 +51,28 @@
             </p>
         </div>
     </div>
+    <input type="button" value="night" onclick="
+        var target = document.querySelector('body');
+        var alist = document.querySelectorAll('a');
+        if(this.value == 'night'){
+            target.style.backgroundColor = 'black';
+            target.style.color = 'white';
+            this.value = 'day';
+            var i = 0;
+            while(i < alist.length){
+                alist[i].style.color = 'powderblue';
+                i = i + 1;
+            }
+        }else{
+            target.style.backgroundColor = 'white';
+            target.style.color = 'black';
+            this.value = 'night';
+            var i = 0;
+            while(i < alist.length){
+                alist[i].style.color = 'blue';
+                i = i + 1;
+            }
+        }
+    ">
 </body>
 </html>
