--- a/3.html
+++ b/3.html
@@ -4,40 +4,35 @@
     <title>WEB1 - JavaScript</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
+    <script>
+        function nightDayHandler(self){
+            var target = document.querySelector('body');
+            var alist = document.querySelectorAll('a');
+            if(self.value == 'night'){
+                target.style.backgroundColor = 'black';
+                target.style.color = 'white';
+                self.value = 'day';
+                var i = 0;
+                while(i < alist.length){
+                    alist[i].style.color = 'powderblue';
+                    i = i + 1;
+                }
+            }else{
+                target.style.backgroundColor = 'white';
+                target.style.color = 'black';
+                self.value = 'night';
+                var i = 0;
+                while(i < alist.length){
+                    alist[i].style.color = 'blue';
+                    i = i + 1;
+                }
+            }
+        }
+    </script>
 </head>
 <body>
     <h1><a href="index.html" style="color: blue;">WEB</a></h1>
-    <!-- <input type="button" value="night" onclick="
-        document.querySelector('body').style.backgroundColor = 'black';
-        document.querySelector('body').style.color = 'white';
-    ">
-    <input type="button" value="day" onclick="
-        document.querySelector('body').style.backgroundColor = 'white';
-        document.querySelector('body').style.color = 'black';
-    "> -->
-    <input type="button" value="night" onclick="
-        var target = document.querySelector('body');
-        var alist = document.querySelectorAll('a');
-        if(this.value == 'night'){
-            target.style.backgroundColor = 'black';
-            target.style.color = 'white';
-            this.value = 'day';
-            var i = 0;
-            while(i < alist.length){
-                alist[i].style.color = 'powderblue';
-                i = i + 1;
-            }
-        }else{
-            target.style.backgroundColor = 'white';
-            target.style.color = 'black';
-            this.value = 'night';
-            var i = 0;
-            while(i < alist.length){
-                alist[i].style.color = 'blue';
-                i = i + 1;
-            }
-        }
-    ">
+    <input type="button" value="night" onclick="nightDayHandler(this);">
     <div id="grid">
         <ol>
             <li><a href="1.html" style="color: blue;">HTML</a></li>
@@ -51,28 +46,5 @@
             </p>
         </div>
     </div>
-    <input type="button" value="night" onclick="
-        var target = document.querySelector('body');
-        var alist = document.querySelectorAll('a');
-        if(this.value == 'night'){
-            target.style.backgroundColor = 'black';
-            target.style.color = 'white';
-            this.value = 'day';
-            var i = 0;
-            while(i < alist.length){
-                alist[i].style.color = 'powderblue';
-                i = i + 1;
-            }
-        }else{
-            target.style.backgroundColor = 'white';
-            target.style.color = 'black';
-            this.value = 'night';
-            var i = 0;
-            while(i < alist.length){
-                alist[i].style.color = 'blue';
-                i = i + 1;
-            }
-        }
-    ">
 </body>
 </html>
