--- a/3.html
+++ b/3.html
@@ -5,27 +5,31 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <script>
-        function nightDayHandler(self){
-            var target = document.querySelector('body');
+        function LinksSetColor(color){
             var alist = document.querySelectorAll('a');
+            var i = 0;
+            while(i < alist.length){
+                alist[i].style.color = color;
+                i = i + 1;
+            }
+        }
+        function BodySetColor(color){
+            document.querySelector('body').style.color = color;
+        }
+        function BodySetBackgroundColor(color){
+            document.querySelector('body').style.backgroundColor = color;
+        }
+        function nightDayHandler(self){
             if(self.value == 'night'){
-                target.style.backgroundColor = 'black';
-                target.style.color = 'white';
+                BodySetBackgroundColor('black');
+                BodySetColor('white');
                 self.value = 'day';
-                var i = 0;
-                while(i < alist.length){
-                    alist[i].style.color = 'powderblue';
-                    i = i + 1;
-                }
+                LinksSetColor('powderblue');
             }else{
-                target.style.backgroundColor = 'white';
-                target.style.color = 'black';
+                BodySetBackgroundColor('white');
+                BodySetColor('black');
                 self.value = 'night';
-                var i = 0;
-                while(i < alist.length){
-                    alist[i].style.color = 'blue';
-                    i = i + 1;
-                }
+                LinksSetColor('blue');
             }
         }
     </script>
