--- a/3.html
+++ b/3.html
@@ -5,31 +5,35 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <script>
-        function LinksSetColor(color){
-            var alist = document.querySelectorAll('a');
-            var i = 0;
-            while(i < alist.length){
-                alist[i].style.color = color;
-                i = i + 1;
+        var Links = {
+            setColor : function(color){
+                var alist = document.querySelectorAll('a');
+                var i = 0;
+                while(i < alist.length){
+                    alist[i].style.color = color;
+                    i = i + 1;
+                }
             }
         }
-        function BodySetColor(color){
-            document.querySelector('body').style.color = color;
-        }
-        function BodySetBackgroundColor(color){
-            document.querySelector('body').style.backgroundColor = color;
+        var Body = {
+            setColor : function(color){
+                document.querySelector('body').style.color = color;
+            },
+            setBackgroundColor : function(color){
+                document.querySelector('body').style.backgroundColor = color;
+            }
         }
         function nightDayHandler(self){
             if(self.value == 'night'){
-                BodySetBackgroundColor('black');
-                BodySetColor('white');
+                Body.setBackgroundColor('black');
+                Body.setColor('white');
                 self.value = 'day';
-                LinksSetColor('powderblue');
+                Links.setColor('powderblue');
             }else{
-                BodySetBackgroundColor('white');
-                BodySetColor('black');
+                Body.setBackgroundColor('white');
+                Body.setColor('black');
                 self.value = 'night';
-                LinksSetColor('blue');
+                Links.setColor('blue');
             }
         }
     </script>
