--- a/1.html
+++ b/1.html
@@ -4,21 +4,22 @@
     <title>WEB1 - HTML</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="colors.js"></script>
 </head>
 <body>
-    <h1><a href="index.html">WEB</a></h1>
+    <h1><a href="index.html" style="color: blue;">WEB</a></h1>
     <input type="button" value="night" onclick="nightDayHandler(this);">
     <div id="grid">
         <ol>
-            <li><a href="1.html">HTML</a></li>
-            <li><a href="2.html">CSS</a></li>
-            <li><a href="3.html">JavaScript</a></li>
+            <li><a href="1.html" style="color: blue;">HTML</a></li>
+            <li><a href="2.html" style="color: blue;">CSS</a></li>
+            <li><a href="3.html" style="color: blue;">JavaScript</a></li>
         </ol>
         <div id="article">
             <h2>HTML</h2>
             <p>
-                <a href="https://www.w3.org/TR/2011/WD-html5-20110405/" target="_blank" title="html5 specification">Hypertext Markup Language (HTML)</a> is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications. Web browsers receive HTML documents from a web server or from local storage and render them into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.
+                <a href="https://www.w3.org/TR/2011/WD-html5-20110405/" target="_blank" title="html5 specification" style="color: blue;">Hypertext Markup Language (HTML)</a> is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications. Web browsers receive HTML documents from a web server or from local storage and render them into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.
                 <img src="html.jpg" width="100%">
             </p>
             <p style="margin-top: 45px;">
