--- a/2.html
+++ b/2.html
@@ -4,16 +4,17 @@
     <title>WEB1 - CSS</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="colors.js"></script>
 </head>
 <body>
-    <h1><a href="index.html">WEB</a></h1>
+    <h1><a href="index.html" style="color: blue;">WEB</a></h1>
     <input type="button" value="night" onclick="nightDayHandler(this);">
     <div id="grid">
         <ol>
-            <li><a href="1.html">HTML</a></li>
-            <li><a href="2.html">CSS</a></li>
-            <li><a href="3.html">JavaScript</a></li>
+            <li><a href="1.html" style="color: blue;">HTML</a></li>
+            <li><a href="2.html" style="color: blue;">CSS</a></li>
+            <li><a href="3.html" style="color: blue;">JavaScript</a></li>
         </ol>
         <div id="article">
             <h2>CSS</h2>
